--- a/style.css
+++ b/style.css
@@ -125,8 +125,8 @@ header{
 .inner-container .img{
     width: 50%;
     height: 100%;
-    background-image: url(images/mysecond.png);
-    background-size: cover;
+    /* background-image: url(images/mysecond.png);
+    background-size: cover; */
     
 }
 @media (max-width :910px) {
@@ -167,8 +167,8 @@ header{
 .box{
     width: 40%;
     height: 100%;
-    background-image: url(images/my.png);
-    background-repeat: no-repeat;
+    /* background-image: url(images/my.png);
+    background-repeat: no-repeat; */
 }
 @media (max-width : 820px) {
     .box{
